stylesheet.css
* {
    color: white;
    box-sizing: border-box;
    font-family: "Helvetica";
    font-weight: 175
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator {
    height: 550px;
    width: 400px;
    border: 1px solid black;
    border-radius: 20px;
}

.buttons {
    border: 1px solid black;
    border-radius: 0 0 20px 20px;
}

button {
    font-size: 44px;
    color: white;
    border: 1px black;
    border-style: solid;
}
.number {
    flex-grow: 1
}

.decimal {
    width: 100px
}

#zero {
    flex-grow: 2;
    border-radius: 0 0 0 20px;
}

.clear-button, .plus-minus {
    flex-grow: 2;
    background-color: #343434;
    width: 100px;
}

.first-row, .second-row, .third-row, .fourth-row, .fifth-row {
    display: flex;
    justify-content: center;
}

.number, .operator {
    height: 90px;
    width: 100px;
}

.result {
    display: flex;
    align-items: center;
    justify-content: end;
    background-color: #202020;
    height: 100px;
    font-size: 48px;
    border: 1px solid black;
    border-radius: 20px 20px 0 0;
}

.result-display {
    margin-right: 10px
}

.number, .decimal {
    background-color: #28282B;
}

.operator {
    background-color: #F28C28;
}

#equals {
    border-radius: 0 0 20px 0;
}

